RESOLVED FIXED270923
[iOS] Top safe area is too large after rotating fullscreen to landscape mode
https://bugs.webkit.org/show_bug.cgi?id=270923
Summary [iOS] Top safe area is too large after rotating fullscreen to landscape mode
Jer Noble
Reported 2024-03-13 11:41:31 PDT
[iOS] Top safe area is too large after rotating fullscreen to landscape mode
Attachments
Jer Noble
Comment 1 2024-03-13 11:41:40 PDT
Jer Noble
Comment 2 2024-03-13 11:47:42 PDT
EWS
Comment 3 2024-03-14 13:01:26 PDT
Committed 276116@main (5b49cc721815): <https://commits.webkit.org/276116@main> Reviewed commits have been landed. Closing PR #25832 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.