[iOS] Top safe area is too large after rotating fullscreen to landscape mode https://bugs.webkit.org/show_bug.cgi?id=270923 rdar://124288251

Reviewed by Aditya Keerthi.

On iPhone, the status bar is hidden in a fullscreen presentation when the device orientation is
landscape. This causes us to skip updating the `_nonZeroStatusBarHeight` in
WKFullScreenViewController, and reserve the space previously held by the status bar and possibly
the camera notch safe area.

When in fullscreen, if the status bar is hidden and we didn't specifically ask it to hide,
don't try to reserve space for it, as it likely won't re-appear.

In order to ensure that the calculated property `-additionalSafeAreaInsets` is re-queried correctly,
mark it as depending on `-prefersStatusBarHidden`, the window's `-safeAreaInsets`, and on the
status bar manager's `-statusBarHidden` property.

* Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenViewController.mm:
(+[WKFullScreenViewController keyPathsForValuesAffectingAdditionalSafeAreaInsets]):
(-[WKFullScreenViewController additionalSafeAreaInsets]):

Canonical link: https://commits.webkit.org/276116@main